# rust-on-docker

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs
