[package]
name = "rust-on-docker"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.6.1"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt","std","json"] }
